<resources>

    <string name="admin_app_name">Admin Trasee!</string>
    <string name="user_app_name">Trasee!</string>
    <string name="user_app_name_trad">Trasee! for Traditional Chinese</string>
    <string name="user_app_name_simp">Trasee! for Simplified Chinese</string>
    <string name="user_app_name_free">Trasee! Trial</string>
    <string name="file_dir_name">Trace2Learn</string>
    <string name="insert_tag">Insert a new tag</string>
    <string name="character">Character</string>
    <string name="tag">Tag</string>
    <string name="submit">Submit</string>
    <string name="search_char">Search a character</string>
    <string name="search">Search</string>
    <string name="search_tag">Search a tag</string>
    <string name="results">Results displayed here</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="tag_header">Edit Tags</string>
    <string name="addtag_header">Add Tag</string>
    <string name="add">Add</string>
    <string name="tag1">Tagged</string>
    <string name="li_preview_description">Preview</string>
    <string name="charplace">Placeholder</string>
    <string name="practice">TraceMe!</string>
    <string name="animate">ShowMe!</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="cancel">Cancel</string>
    <string name="instruction_create_word">Click on a character to add it to the phrase</string>
    <string name="instruction_browse_chars">Click and hold on a character for more options</string>
    <string name="instruction_browse_lessons">Click and hold on a collection for more options</string>
    <string name="filter_none">Filter: None</string>
    <string name="save_word">Save Phrase</string>
    <string name="id_tag_header">Edit IDs and Tags</string>
    <string name="add_key">Add Key</string>
    <string name="add_value">Add Value</string>
    <string name="cart">Cart: 0</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="none"></string>
    <string name="export">Export</string>
    <string name="instruction_export">Add items to cart</string>
    <string name="instruction_export_chars">Add characters to cart</string>
    <string name="instruction_export_words">Add phrases to cart</string>
    <string name="instruction_export_lessons">Add collections to cart</string>
    <string name="shopping_cart">Viewing cart</string>
    <string name="back">Back</string>
    <string name="file_header">Import from file</string>
    <string name="type">Type</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="category">Categories</string>
    <string name="assign_categories">Assign Categories</string>
    <string name="quizModeOn">Quiz On</string>
    <string name="quizModeOff">Quiz Off</string>
    <string name="see_answer">See Answer</string>
    <string name="exit">Exit</string>
    <string name="all_words">All Phrases</string>
    <string name="play_sound">Play Sound</string>
    <string name="introduction">Introduction</string>
    <string name="create_phrase">Build a Phrase</string>
    <string name="browse_collections">Browse Collections</string>
    <string name="stats">Statistics</string>
    <string name="statsCharacters">Characters:"</string>
    <string name="statsPhrases">Phrases:</string>
    <string name="statsCollections">Collections:</string>
    <string name="lifetimeScore">Score:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menuGoHome">Home</string>
    <string name="menuStats">Statistics</string>
    <string name="menuAbout">About</string>
    <string name="aboutCredits">created by\nAggria Inc.</string>
    <string name="editkey_hint">key</string>
    <string name="editvaue_hint">value</string>
    <string name="edittag_hint">enter any tag or description</string>
    <string name="chartLabel">Distribution of # of Strokes per Character</string>
    <string name="go_next">Next Phrase</string>
    <string name="go_prev">Previous Phrase</string>
    <string name="ok">OK</string>
    <string name="phrase_deletion">Phrase Deletion</string>
    <string name="phrase_deletion_text">The phrase is no longer part of any collection, and will be deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upgrade_app">Upgrade!</string>
    <string name="upgrade_app_text">This feature is available in the full app!  Would you like to upgrade?</string>
    <string name="add_to_collection">Add To Collection</string>
    <string name="name">name</string>
    <string name="create_new">Create New</string>
    <string name="last_viewed">Last Viewed</string>
    <string name="show">Labels</string>
    <string name="hide">Labels</string>
    <string name="view_edit_char">View/Edit Character</string>
    <string name="quiz">Quiz</string>
    <string name="tell_me">TellMe!</string>
    <string-array name="quiz_difficulty">
        <item>Basic</item>
        <item>Intermediate</item>
        <item>All Phrases</item>
    </string-array>
    <string name="fifty_fifty">50:50</string>
    <string name="reset_score">Reset Score</string>
    
</resources>