<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom" >

    <TextView
        android:id="@+id/phraseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="15sp" />

    <Gallery
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phraseTitle" />

    <HorizontalScrollView
        android:id="@+id/tag_list_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trace_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/tag_list"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:text="@string/tag"
            android:textSize="19sp" />
    </HorizontalScrollView>

    <ViewAnimator
        android:id="@+id/view_slot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tag_list_scroll_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gallery" >

        <com.trace2learn.TraceLibrary.SquareLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/character_view_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </com.trace2learn.TraceLibrary.SquareLayout>
    </ViewAnimator>

    <ImageView
        android:id="@+id/quizIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trace_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/see_answer"
        android:visibility="invisible" />

    <Button
        android:id="@+id/trace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/practice" />

    <Button
        android:id="@+id/animate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/trace_button"
        android:layout_toRightOf="@+id/trace_button"
        android:text="@string/animate" />

    <ToggleButton
        android:id="@+id/quizModeToggle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/trace_button"
        android:layout_alignParentRight="true"
        android:textOff="@string/quizModeOff"
        android:textOn="@string/quizModeOn" />

</RelativeLayout>