<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lesson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/header"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/filterStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lesson_name"
        android:textColor="@color/filter_label" />
        
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/filterButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/filterStatus" >
    </ListView>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClickFilter"
        android:text="@string/search" />

    <ImageView
        android:id="@+id/infoButton"
        android:layout_alignParentRight="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="2dp"
        android:layout_alignTop="@+id/filterButton"
        android:contentDescription="@string/info"
        android:src="@drawable/info_button" />

    <ToggleButton
        android:id="@+id/showDefinitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textOff="@string/show"
        android:textOn="@string/hide" />

</RelativeLayout>