<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom" >

    <RelativeLayout
        android:id="@+id/phrase_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/phrase_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/view_edit_char"
            android:textColor="@color/header"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phrase_practice_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/phrase_title_layout"
        android:gravity="fill_horizontal" >

        <FrameLayout
            android:id="@+id/character_slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tag_list_scroll_view"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="35dp" />

        <HorizontalScrollView
            android:id="@+id/tag_list_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/left1Button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tag_list"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:maxLines="2"
                android:scrollHorizontally="true"
                android:textSize="18sp" />
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/quiz_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@+id/left1Button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/see_answer"
            android:src="@drawable/quiz_button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/right1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onRight1ButtonClick" />

        <Button
            android:id="@+id/right2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/right1Button"
            android:onClick="onRight2ButtonClick" />

        <Button
            android:id="@+id/left1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="onLeft1ButtonClick" />

        <Button
            android:id="@+id/left2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/quiz_toggle"
            android:onClick="onLeft2ButtonClick" />

        <ToggleButton
            android:id="@+id/quiz_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/left1Button"
            android:textOff="@string/quizModeOff"
            android:textOn="@string/quizModeOn" />
    </RelativeLayout>

</RelativeLayout>